# tanalysis

./: .env.example  .gitignore  ARCH.md  CLAUDE.md  Makefile  docker-compose.yml  main.py  opencode.json  prefect.yaml  pyproject.toml  requirements.txt  test_main.http
alembic/: env.py
app/: config.py
app/api/: flows.py  jira.py  product.py
app/api/routers/: flows.py  jira.py  product.py
app/config/: database.py  logging.py  observability.py  security.py  settings.py
app/core/: config.py  lifespan.py  security.py
app/db/: database.py  mariadb.py  mongodb.py
app/flows/: azure_etl.py  jira_clean_flow.py  jira_etl.py  jira_sync_flow.py
app/models/: __init__.py  azure_ticket.py  jira_ticket.py  product.py
app/repositories/: jira_mongo_repo.py  jira_ticket_repo.py  product_repo.py
app/routers/: azure.py  jira.py  product.py
app/services/: azure_service.py  jira_service.py
apps/api-service/: main.py  pyproject.toml
apps/api-service/routes/: health.py  product.py
apps/api-service/src/routes/: flows.py  jira.py
apps/workflow-service/: pyproject.toml
apps/workflow-service/flows/: jira_clean_flow.py  jira_sync_flow.py
apps/workflow-service/src/flows/: jira_clean_flow.py  jira_sync_flow.py
apps/workflow-service/src/tasks/: jira_clean_tasks.py  jira_sync_tasks.py
tests/apps/api_service/: test_routes.py
