[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tanalysis"
version = "0.1.0"
description = "Jira Analytics Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pandas",
    "motor",
    "prefect",
    "pydantic-settings",
    "pymongo",
    "sqlalchemy",
    "pymysql",
    "pytz",
    "python-dateutil",
    "requests",
    "requests-oauthlib",
    "PyYAML",
    "mysql-connector-python",
    "minio",
    "cachetools",
    "psutil",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "aiohttp",
    "python-dotenv",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "pre-commit",
]

[project.scripts]
tanalysis = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
