[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tanalysis"
version = "0.1.0"
description = "Jira Analytics Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pandas",
    "prefect",
    "pydantic-settings",
    "pymongo",
    "sqlalchemy",
    "pymysql",
    "pytz",
    "python-dateutil",
    "requests",
    "requests-oauthlib",
    "PyYAML",
    "mysql-connector-python",
    "minio",
    "cachetools",
    "psutil",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "aiohttp",
    "python-dotenv",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "pre-commit",
]

[project.scripts]
tanalysis = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
    "RUF001", # string contains ambiguous unicode character
    "RUF002", # docstring contains ambiguous unicode character
    "RUF003", # comment contains ambiguous unicode character
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]
