[project]
name = "tanalysis-workspace"
version = "0.1.0"
description = "Jira Analytics Pipeline Workspace"
requires-python = ">=3.11"
dependencies = [
    "api-service",
    "workflow-service",
    "shared",
    "common>=0.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "pre-commit",
]

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv.sources]
api-service = { workspace = true }
workflow-service = { workspace = true }
shared = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "PT", "RET", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["routes", "flows", "shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
