[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "shared",
    "fastapi",
    "uvicorn",
    "httpx",
    "prometheus-client",
    "prometheus-fastapi-instrumentator",
    "prefect",
]

[tool.uv.sources]
shared = { workspace = true }



[tool.hatch.build.targets.wheel]
packages = ["src/main.py", "src/routes"]
